# backend-bakeoff

./: .editorconfig  .gitignore  ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  METHODOLOGY.md  Makefile  PHASE_0_EXECUTION_GUIDE.md  PHASE_0_SPEC.md  PHASE_1_SPEC.md  QUICKSTART.md  README.md  RUNTIMES.md  SESSION_RECAP.md  START_HERE.md  STRATEGY_SUMMARY.md  TASKS.md  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/workflows/: README.md  ci.yml
api/: README.md  openapi.yaml
apps/backends/bun/: .dockerignore  Dockerfile  package.json
apps/backends/go/: Dockerfile  go.mod  go_optimized.mod
apps/backends/node/: Dockerfile  package.json
apps/backends/php/: .dockerignore  .env.example  .gitignore  Dockerfile  composer.json
apps/backends/python/: .dockerignore  (+2 more)
apps/backends/rust/: Cargo.toml  Dockerfile
apps/backends/rust/src/: config.rs  main.rs
apps/backends/rust/src/clients/: tax.rs
apps/backends/rust/src/db/: mod.rs  orders.rs
apps/backends/rust/src/domain/: checkout.rs  fraud.rs  mod.rs
apps/backends/rust/src/http/: middleware.rs  router.rs
apps/backends/rust/src/http/handlers/: checkout.rs  health.rs  mod.rs  orders.rs  products.rs
apps/backends/rust/src/observability/: mod.rs
apps/results-api/: .gitignore  Dockerfile  go.mod  go.sum  main.go
apps/tax-service/: Dockerfile  server.py
cmd/server/: main.go
infra/observability/: grafana-bakeoff-dashboard.json  prometheus-local.yml
scripts/: audit-methodology.sh  baseline-bench.py  baseline_results.json  bench_tests.csv  phase-0-agent.py  phase-0-agent.sh
(+93 files in other folders)
